declarative/processor/src/test/resources/good/graph extends nothing.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Graph;

@Graph
interface X {
}
