declarative/processor/src/test/resources/bad/dataset is not an interface.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Dataset;

@Dataset
class X {
}
